--- a/local/templates/main/assets/css/app.css
+++ b/local/templates/main/assets/css/app.css
@@ -1035,6 +1035,8 @@ textarea {
   right: auto;
 }
 
+
+
 /*.swiper-button-prev:after,
 .swiper-rtl .swiper-button-next:after {
   content: "prev";
@@ -1045,6 +1047,17 @@ textarea {
   left: auto;
   right: 10px;
 }
+
+.main-slider .swiper-button-prev{
+  left: 64px;
+  right: auto;
+}
+
+.main-slider .swiper-button-next{
+  left: auto;
+  right: 64px;
+}
+
 
 /*.swiper-button-next:after,
 .swiper-rtl .swiper-button-prev:after {
