--- a/local/templates/main/assets/css/app.css
+++ b/local/templates/main/assets/css/app.css
@@ -1003,7 +1003,7 @@ textarea {
 .swiper-button-prev.swiper-button-disabled {
   cursor: auto;
   opacity: 0.35;
-  pointer-events: none;
+  /*pointer-events: none;*/
 }
 
 .swiper-button-next.swiper-button-hidden,
@@ -2576,7 +2576,7 @@ span.flatpickr-weekday {
   height: 5.3rem;
   height: var(--header-height);
   left: 0;
-  position: fixed;
+  /*position: fixed;*/
   top: 0;
   width: 100%;
   z-index: 1000;
