--- a/local/templates/main/assets/css/app.css
+++ b/local/templates/main/assets/css/app.css
@@ -1062,6 +1062,20 @@ textarea {
   margin: 0 auto;
 }
 
+@media(max-width: 974px)
+{
+  .main-slider .swiper-button-prev{
+    left: 27px;
+    right: auto;
+  }
+
+  .main-slider .swiper-button-next{
+    left: auto;
+    right: 27px;
+  }
+}
+
+
 
 /*.swiper-button-next:after,
 .swiper-rtl .swiper-button-prev:after {
