--- a/local/templates/main/assets/css/index.css
+++ b/local/templates/main/assets/css/index.css
@@ -2479,12 +2479,12 @@
   }
 
   .section_hero .container {
-    padding-top: 40px;
+    /*padding-top: 40px;*/
     position: relative;
   }
 
   .main {
-    padding-top: 60px;
+    /*padding-top: 60px;*/
   }
 
   .section_form {
@@ -2516,7 +2516,7 @@
   .hero__footnote {
     font-size: 2.604166vw;
     line-height: 6.25vw;
-    margin-top: 3.8rem;
+    /*margin-top: 3.8rem;*/
     font-weight: 400;
   }
 
