dev | Шрифт для шапки

--- a/local/templates/main/assets/css/app.css
+++ b/local/templates/main/assets/css/app.css
@@ -2594,6 +2594,8 @@ span.flatpickr-weekday {
   top: 0;
   width: 100%;
   z-index: 1000;
+
+  font-family: "Lato", sans-serif !important;
 }
 
 .header .container {
