124846 | правки по мобильной верствке

--- a/local/templates/main/components/bitrix/news.list/main_slider/style.css
+++ b/local/templates/main/components/bitrix/news.list/main_slider/style.css
@@ -30,6 +30,7 @@
 .main-slider ul li img {
   position: absolute;
   height: 100%;
+  width: 100%;
   top: 0;
   left: 0;
 }
@@ -43,7 +44,7 @@
 
 @media (max-width: 768px) {
   .main-slider.container {
-    padding-top: 40px;
+    padding-top: 16px;
   }
 
   .main-slider ul li {
