--- a/local/templates/main/assets/css/certpdf.css
+++ b/local/templates/main/assets/css/certpdf.css
@@ -2,76 +2,97 @@
   margin: 0;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Основные контейнеры */
+.cert__image {
+  height: 830px;
+}
+
+.pdf-container {
+  width: 100%;
+  height: 830px;
+  color: black;
+  border-collapse: collapse;
+  page-break-inside: avoid;
+  table-layout: fixed;
+  border-spacing: 0;
+}
+
+.pdf-container td {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  vertical-align: top;
+}
+
+/* Логотип */
 .order-pdf__logo {
   margin-bottom: 13px;
   text-align: center;
 }
 
-.clear {
-  clear: both;
-  border-bottom: 1px solid black;
-}
-
-.order-pdf__congrats-title {
-  font-size: 18px;
-  line-height: 22px;
+/* Типографика */
+.pdf-text-center {
   text-align: center;
 }
 
-.order-pdf__block1 {
-  margin-top: 120px;
-  padding-bottom: 35px;
-  min-height: 400px;
-  padding-left: 30px;
-  padding-right: 30px;
+.pdf-font-14 {
+  font-size: 14px;
+  line-height: 16px;
 }
 
-.order-pdf__congrats {
+.pdf-font-24 {
   font-size: 24px;
-  line-height: 31px;
-  text-align: center;
+  line-height: 28px;
 }
 
-.order-pdf__number {
-  font-size: 23px;
-  line-height: 24.5px;
-  float: left;
+.pdf-font-26 {
+  font-size: 26px;
+  line-height: 30px;
 }
 
-
-.info__cert {
-  font-size: 16px;
-  padding-bottom: 15px;
-  width: 370px;
+.pdf-line-height-09 {
+  line-height: 0.9;
 }
 
-.info__cert span {
-  font-size: 16px;
+.pdf-line-height-1 {
+  line-height: 1;
 }
 
-.info__contacts {
-  font-size: 16px;
-  padding-bottom: 11.4px;
+/* QR секция */
+.pdf-qr-section {
+  width: auto;
+  margin: 0 auto;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
-
-
-.info__2 {
-  font-size: 10px;
-  line-height: 10px;
+.pdf-qr-section td {
+  margin: 0;
+  padding: 0;
+  border: 0;
 }
 
-.info__1 {
-  float: left;
-  padding-left: 30px;
+.pdf-qr-text {
+  padding-left: 5px;
+  vertical-align: top;
 }
 
-.info__2 {
-  float: right;
-  margin-right: 30px !important;
-  padding-right: 15px;
+/* Контактная таблица */
+.pdf-contact-table {
+  width: 80%;
+  margin: 0 auto;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
-.cert__image {
-  height: 830px;
+.pdf-contact-table td {
+  margin: 0;
+  padding: 0;
+  border: 0;
 }
