--- a/local/templates/main/assets/css/certpdf.css
+++ b/local/templates/main/assets/css/certpdf.css
@@ -1,3 +1,15 @@
+
+@font-face {
+  font-display: swap;
+  font-family: "Monserat";
+  font-style: normal;
+  font-weight: 400;
+  src: url(../fonts/Montserrat-Regular.otf) format("opentype"),
+  url(../fonts/Montserrat-Regular.ttf) format("truetype");
+}
+
+
+
 @page {
   margin: 0;
 }
@@ -6,6 +18,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Monserat', sans-serif;
 }
 
 /* Основные контейнеры */
