125772 | Баг с поп-апами / Наложение

--- a/local/templates/main/assets/css/app.css
+++ b/local/templates/main/assets/css/app.css
@@ -3486,7 +3486,9 @@ img.lazy.loaded {
   width: 100%;
   z-index: 1000;
 }
-
+.child_popap{
+  z-index: 100000;
+}
 .modal:before {
   content: "";
   height: 100%;
