--- a/local/templates/main/assets/css/app.css
+++ b/local/templates/main/assets/css/app.css
@@ -3906,12 +3906,113 @@ img.lazy.loaded {
 }
 
 .modal_cancel .modal__container {
-  max-width: 37.5rem;
+  max-width: 367px;
+  padding: 18px 20px;
+  border-radius: 16px;
+  font-family: Lato;
 }
 
-.modal_cancel .modal__container>.h3 {
-  margin-bottom: 2.4rem;
-  text-align: left;
+.modal_cancel .modal__content-title{
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 24px;
+  margin-bottom: 16px;
+  max-width: 244px;
+}
+
+.modal_cancel .modal__content-info,
+.modal_cancel .modal__content-nochange{
+  font-size: 16px;
+  line-height: 18px;
+  font-family: Lato;
+  letter-spacing: -0.15px;
+  max-width: 315px;
+}
+
+.modal_cancel .modal__content-nochange{
+  margin-top: 18px;
+}
+
+.modal_cancel .modal__content-btns{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 16px;
+}
+
+.modal_cancel .modal__content-btn{
+  cursor: pointer;
+  border-radius: 12px;
+  padding: 11px 0;
+  width: 100%;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 600;
+  font-family: Lato;
+  height: auto;
+}
+
+.modal_cancel .modal__content-btn.cancel{
+  margin-left: 10px;
+  background-color: #E39250;
+  color: white;
+  max-width: 136px;
+}
+
+.modal_cancel .modal__content-btn.return:hover{
+  background-color:var(--color-btn-h);
+}
+
+.modal_cancel .modal__close{
+  width: 71px;
+  height: 20px;
+  top: 19px;
+  right: 20px;
+}
+
+.modal_canceled .modal__close{
+  width: 71px;
+  height: 20px;
+  top: 42px;
+  right: 32px;
+}
+
+.modal_canceled .modal__container{
+  max-width: 490px;
+  padding: 32px;
+  border-radius: 8px;
+}
+
+.modal_canceled .modal__content-title{
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 40px;
+  margin-bottom: 20px;
+}
+
+.modal_canceled .modal__content-info{
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 24px;
+}
+
+.modal_canceled .modal__content-why label{
+  
+}
+
+.modal__close span{
+  margin-right: 6px;
+  font-size: 14px;
+  border-bottom: 1px solid #E39250;
+}
+
+.modal__close:hover span{
+  border-color: transparent;
+}
+
+@media (max-width: 375px) {
+  .modal_cancel .modal__content-btn.cancel{
+    max-width: 124px;
+  }
 }
 
 .modal_review .modal__container {
